--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<b><i>test</i> wow</b>"
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Learn The Past and Taste The Future</title>
+</head>
+<body>
+Bismillaahir-rahmaanir-rahiym
+<b><i>test</i> wow</b>
+
+</body>
+</html>
+
