--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Learn The Past and Taste The Future</title>
 </head>
 <body>
-Bismillaahir-rahmaanir-rahiym
+<h6>Bismillaahir-rahmaanir-rahiym</h6>
+<h1>Halaman Github Untuk Belajar HTML, CSS, dan JavaScript</h1>
 <b><i>test</i> wow</b>
 
 </body>
