--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 <h6>Bismillaahir-rahmaanir-rahiym</h6>
 <h1>Halaman Github Untuk Belajar HTML, CSS, dan JavaScript</h1>
 <b><i>test</i> wow</b>
+<p>
+	Berjilbab yang benar bukan hanya menutup rambut kepala. Tetapi juga harus memperhatikan baju dan rok yang digunakan, mestilah lebar. Adapun menggunakan celana panjang tidaklah menggambarkan menutup aurat dengan sempurna meski longgar karena bentuk lekuk tubuh masih terlihat. Jadi yang aman bagi wanita adalah menggunakan baju atau gamis lalu ditutupi dengan jilbab yang lebar di luarnya yang panjangnya hingga pinggang atau paha sehingga lebih menutupi sempurna bagian badan. Kemudian bagian bawah lebih sempurna menggunakan rok yang lebar (longgar), tidak ketat. Rok tersebut hingga menutupi kaki. Adapun panjang rok tersebut sebagaimana disebutkan dalam hadits Ummu Salamah berikut ini.
+عَنِ ابْنِ عُمَرَ قَالَ قَالَ رَسُولُ اللَّهِ -صلى الله عليه وسلم- مَنْ جَرَّ ثَوْبَهُ خُيَلاَءَ لَمْ يَنْظُرِ اللَّهُ إِلَيْهِ يَوْمَ الْقِيَامَةِ فَقَالَتْ أُمُّ سَلَمَةَ فَكَيْفَ يَصْنَعْنَ النِّسَاءُ بِذُيُولِهِنَّ قَالَ « يُرْخِينَ شِبْرًا ». فَقَالَتْ إِذًا تَنْكَشِفَ أَقْدَامُهُنَّ. قَالَ فَيُرْخِينَهُ ذِرَاعًا لاَ يَزِدْنَ عَلَيْهِ
+Dari Ibnu ‘Umar, ia berkata bahwa Rasulullah shallallahu ‘alaihi wa sallam bersabda, “Siapa yang menjulurkan pakaiannya (di bawah mata kaki) karena sombong, maka Allah pasti tidak akan melihat kepadanya pada hari kiamat.” Ummu Salamah lantas berkata, “Lalu bagaimana para wanita menyikapi ujung pakaiannya?” Nabi shallallahu ‘alaihi wa sallam menjawab, “Hendaklah mereka menjulurkannya sejengkal.” Ummu Salamah berkata lagi, “Kalau begitu, telangkap kakinya masih tersingkap.” Beliau shallallahu ‘alaihi wa sallam bersabda, “Turunkan satu hasta, jangan lebih dari itu.“(HR. Tirmidzi no. 1731 dan An Nasai no. 5338. At Tirmidzi mengatakan bahwa hadits ini hasan shahih. Al Hafizh Abu Thohir mengatakan bahwa sanad hadits ini shahih)
+Pelajaran yang bisa kita petik dari penjelasan ulama Syafi’iyah di atas, punggung dan bagian dalam telapak tangan bukanlah aurat yang mesti ditutupi, wallahu a’lam.
 
+
+Sumber : https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html
+</p>
 </body>
 </html>
 
