--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 	<h6>Bismillaahir-rahmaanir-rahiym</h6>
+	<img src="">
 	<h1>Halaman Github Untuk Belajar HTML, CSS, dan JavaScript</h1>
 	<b><i>test</i> wow</b>
-	<p>
+	<p id="jilbab">
 		Berjilbab yang benar bukan hanya menutup rambut kepala. Tetapi juga harus memperhatikan baju dan rok yang digunakan, mestilah lebar. Adapun menggunakan celana panjang tidaklah menggambarkan menutup aurat dengan sempurna meski longgar karena bentuk lekuk tubuh masih terlihat. Jadi yang aman bagi wanita adalah menggunakan baju atau gamis lalu ditutupi dengan jilbab yang lebar di luarnya yang panjangnya hingga pinggang atau paha sehingga lebih menutupi sempurna bagian badan. Kemudian bagian bawah lebih sempurna menggunakan rok yang lebar (longgar), tidak ketat. Rok tersebut hingga menutupi kaki. Adapun panjang rok tersebut sebagaimana disebutkan dalam hadits Ummu Salamah berikut ini.
 		<div>
 			عَنِ ابْنِ عُمَرَ قَالَ قَالَ رَسُولُ اللَّهِ -صلى الله عليه وسلم- مَنْ جَرَّ ثَوْبَهُ خُيَلاَءَ لَمْ يَنْظُرِ اللَّهُ إِلَيْهِ يَوْمَ الْقِيَامَةِ فَقَالَتْ أُمُّ سَلَمَةَ فَكَيْفَ يَصْنَعْنَ النِّسَاءُ بِذُيُولِهِنَّ قَالَ « يُرْخِينَ شِبْرًا ». فَقَالَتْ إِذًا تَنْكَشِفَ أَقْدَامُهُنَّ. قَالَ فَيُرْخِينَهُ ذِرَاعًا لاَ يَزِدْنَ عَلَيْهِ
