--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<h1>Halaman Github Untuk Belajar HTML, CSS, dan JavaScript</h1>
 	<b><i>test</i> wow</b>
 	<article>
-	<h2 alt="Menggunakan tag article">Hijab dengan jilbab</h2>
+	<h2 title="Menggunakan tag article">Hijab dengan jilbab</h2>
 	<p id="jilbab">
-		Berjilbab yang benar <mark alt="Menggunakan tag mark">bukan hanya menutup rambut kepala</mark>. Tetapi juga harus memperhatikan baju dan rok yang digunakan, mestilah lebar. Adapun menggunakan celana panjang tidaklah menggambarkan menutup aurat dengan sempurna meski longgar karena bentuk lekuk tubuh masih terlihat. Jadi yang aman bagi wanita adalah menggunakan baju atau gamis lalu ditutupi dengan jilbab yang lebar di luarnya yang panjangnya hingga pinggang atau paha sehingga lebih menutupi sempurna bagian badan. Kemudian bagian bawah lebih sempurna menggunakan rok yang lebar (longgar), tidak ketat. Rok tersebut hingga menutupi kaki. Adapun panjang rok tersebut sebagaimana disebutkan dalam hadits Ummu Salamah berikut ini.
+		Berjilbab yang benar <mark title="Menggunakan tag mark">bukan hanya menutup rambut kepala</mark>. Tetapi juga harus memperhatikan baju dan rok yang digunakan, mestilah lebar. Adapun menggunakan celana panjang tidaklah menggambarkan menutup aurat dengan sempurna meski longgar karena bentuk lekuk tubuh masih terlihat. Jadi yang aman bagi wanita adalah menggunakan baju atau gamis lalu ditutupi dengan jilbab yang lebar di luarnya yang panjangnya hingga pinggang atau paha sehingga lebih menutupi sempurna bagian badan. Kemudian bagian bawah lebih sempurna menggunakan rok yang lebar (longgar), tidak ketat. Rok tersebut hingga menutupi kaki. Adapun panjang rok tersebut sebagaimana disebutkan dalam hadits Ummu Salamah berikut ini.
 		<div>
 			عَنِ ابْنِ عُمَرَ قَالَ قَالَ رَسُولُ اللَّهِ -صلى الله عليه وسلم- مَنْ جَرَّ ثَوْبَهُ خُيَلاَءَ لَمْ يَنْظُرِ اللَّهُ إِلَيْهِ يَوْمَ الْقِيَامَةِ فَقَالَتْ أُمُّ سَلَمَةَ فَكَيْفَ يَصْنَعْنَ النِّسَاءُ بِذُيُولِهِنَّ قَالَ « يُرْخِينَ شِبْرًا ». فَقَالَتْ إِذًا تَنْكَشِفَ أَقْدَامُهُنَّ. قَالَ فَيُرْخِينَهُ ذِرَاعًا لاَ يَزِدْنَ عَلَيْهِ
 		</div>
