--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		Dari Ibnu ‘Umar, ia berkata bahwa Rasulullah shallallahu ‘alaihi wa sallam bersabda, “Siapa yang menjulurkan pakaiannya (di bawah mata kaki) karena sombong, maka Allah pasti tidak akan melihat kepadanya pada hari kiamat.” Ummu Salamah lantas berkata, “Lalu bagaimana para wanita menyikapi ujung pakaiannya?” Nabi shallallahu ‘alaihi wa sallam menjawab, “Hendaklah mereka menjulurkannya sejengkal.” Ummu Salamah berkata lagi, “Kalau begitu, telangkap kakinya masih tersingkap.” Beliau shallallahu ‘alaihi wa sallam bersabda, “Turunkan satu hasta, jangan lebih dari itu.“(HR. Tirmidzi no. 1731 dan An Nasai no. 5338. At Tirmidzi mengatakan bahwa hadits ini hasan shahih. Al Hafizh Abu Thohir mengatakan bahwa sanad hadits ini shahih)
 		Pelajaran yang bisa kita petik dari penjelasan ulama Syafi’iyah di atas, punggung dan bagian dalam telapak tangan bukanlah aurat yang mesti ditutupi, wallahu a’lam.
 
-		<span class="sumber">Sumber : https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html</span>
+		<div title="menggunakan tag div" class="sumber">Sumber : <a href="https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html" title="Menggunakan tag a">https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html</a></div>
 	</p>
 	</article>
 </body>
