--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
 </head>
 <body lang="id">
-	<h6>Bismillaahir-rahmaanir-rahiym</h6>
-	<img src="header.jpg">
-	<h1>Halaman Github Untuk Belajar HTML, CSS, dan JavaScript</h1>
+	<h6 title="Menggunakan tag h6">Bismillaahir-rahmaanir-rahiym</h6>
+	<img src="header.jpg" alt="Header Puun Nih" title="Header Puun">
+	<h1 title="Menggunakan tag h1">Halaman Github Untuk Belajar HTML, CSS, dan JavaScript</h1>
 	<b><i>test</i> wow</b>
-	<article>
-	<h2 title="Menggunakan tag article">Hijab dengan jilbab</h2>
+	<article title="Menggunakan tag article">
+	<h2 title="Menggunakan tag h2">Hijab dengan jilbab</h2>
 	<p id="jilbab">
 		Berjilbab yang benar <mark title="Menggunakan tag mark">bukan hanya menutup rambut kepala</mark>. Tetapi juga harus memperhatikan baju dan rok yang digunakan, mestilah lebar. Adapun menggunakan celana panjang tidaklah menggambarkan menutup aurat dengan sempurna meski longgar karena bentuk lekuk tubuh masih terlihat. Jadi yang aman bagi wanita adalah menggunakan baju atau gamis lalu ditutupi dengan jilbab yang lebar di luarnya yang panjangnya hingga pinggang atau paha sehingga lebih menutupi sempurna bagian badan. Kemudian bagian bawah lebih sempurna menggunakan rok yang lebar (longgar), tidak ketat. Rok tersebut hingga menutupi kaki. Adapun panjang rok tersebut sebagaimana disebutkan dalam hadits Ummu Salamah berikut ini.
 		<div>
@@ -18,10 +18,18 @@
 		</div>
 		Dari Ibnu ‘Umar, ia berkata bahwa Rasulullah shallallahu ‘alaihi wa sallam bersabda, “Siapa yang menjulurkan pakaiannya (di bawah mata kaki) karena sombong, maka Allah pasti tidak akan melihat kepadanya pada hari kiamat.” Ummu Salamah lantas berkata, “Lalu bagaimana para wanita menyikapi ujung pakaiannya?” Nabi shallallahu ‘alaihi wa sallam menjawab, “Hendaklah mereka menjulurkannya sejengkal.” Ummu Salamah berkata lagi, “Kalau begitu, telangkap kakinya masih tersingkap.” Beliau shallallahu ‘alaihi wa sallam bersabda, “Turunkan satu hasta, jangan lebih dari itu.“(HR. Tirmidzi no. 1731 dan An Nasai no. 5338. At Tirmidzi mengatakan bahwa hadits ini hasan shahih. Al Hafizh Abu Thohir mengatakan bahwa sanad hadits ini shahih)
 		Pelajaran yang bisa kita petik dari penjelasan ulama Syafi’iyah di atas, punggung dan bagian dalam telapak tangan bukanlah aurat yang mesti ditutupi, wallahu a’lam.
-
-		<div title="menggunakan tag div" class="sumber">Sumber : <a href="https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html" title="Menggunakan tag a">https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html</a></div>
+		<br title="menggunakan tag br">
+		<br title="menggunakan tag br">
+		<span title="menggunakan tag span" class="sumber">Sumber : <a href="https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html" title="Menggunakan tag a">https://rumaysho.com/8452-aurat-wanita-menurut-madzhab-syafii.html</a></span>
 	</p>
 	</article>
+
+	<main>
+	<article>
+		
+
+	</article>
+	</main>
 </body>
 </html>
 
