--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
 		</tr>
 	</table>
 	<div id="intro">
-		<div id="tanggal">Tanggal</div>
-		<div id="bismillah">Bismillaahir-rahmaanir-rahiym</div>
-		<div id="jam" onmouseover ="this.innerHTML = 'Jam'">Jam</div>
+		<div id="hari"></div>
+		
+		<div id="jam"></div>
+		
+		<div id="menit"></div>
+		
+		<div id="detik"></div>
+		
 	</div>
 	<div id="content">
 
@@ -55,7 +60,17 @@
 		var jadwal = document.getElementById("jadwal-acara");
 		var lokasi = document.getElementById("lokasi");
 		var content = document.getElementById("content");
-		var content_jadwal = '<div class="main"> <div class="container bgy-green bgy-center bgy-back" > <div> <div><img src="top.png" width="100%" style="z-index: 1;position: static;"></div> </div> <img src="label2.png" width="30%"> <div> <img src="bottom.png" width="100%"> </div> </div></div>'
+		var content_jadwal = '<div class="main"> \
+								<div class="container bgy-green bgy-center bgy-back" > \
+									<div> \
+										<div> \
+											<img src="top.png" width="100%" style="z-index: 1;position: static;"> \
+										</div> \
+									</div> \
+									<img src="label2.png" width="30%"> <div> <img src="bottom.png" width="100%"> \
+								</div> \
+							</div> \
+							';
 		jadwal.addEventListener('click',function (event){
 			content.innerHTML = content_jadwal;
 		});
