--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 		<div id="menit"></div>
 		
 		<div id="detik"></div>
+
+		<div id="status"></div>
 		
 	</div>
 	<div id="content">
@@ -75,7 +77,7 @@
 			content.innerHTML = content_jadwal;
 		});
 		lokasi.addEventListener('click',function (event){
-			content.innerHTML = '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.6894348662413!2d107.6856125707673!3d-6.32191505487858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69426600cc2e9f%3A0x5c0ba6420ad0ca22!2sMasjid+Adhwaaussunnah!5e0!3m2!1sen!2sid!4v1512966880468" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>';
+			content.innerHTML = '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.6894348662413!2d107.6856125707673!3d-6.32191505487858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69426600cc2e9f%3A0x5c0ba6420ad0ca22!2sMasjid+Adhwaaussunnah!5e0!3m2!1sen!2sid!4v1512966880468" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>';
 		});
 	</script>
 </body>
