--- a/index.html
+++ b/index.html
@@ -75,9 +75,17 @@
 							';
 		jadwal.addEventListener('click',function (event){
 			content.innerHTML = content_jadwal;
+			jadwal.style.cursor = "default";
+			jadwal.style.background = "#009900";
+			lokasi.style.cursor = "cursor";
+			lokasi.style.background = "#008800";
 		});
 		lokasi.addEventListener('click',function (event){
-			content.innerHTML = '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2895.6894348662413!2d107.6856125707673!3d-6.32191505487858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69426600cc2e9f%3A0x5c0ba6420ad0ca22!2sMasjid+Adhwaaussunnah!5e0!3m2!1sen!2sid!4v1512966880468" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>';
+			content.innerHTML = '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32334.93849437493!2d107.65924990048114!3d-6.327988162315687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e694265f3c46d13%3A0x2c3b7a5351c8781e!2zNsKwMTknMTMuOCJTIDEwN8KwNDEnMDcuNyJF!5e0!3m2!1sen!2sid!4v1513003467215" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>';
+			lokasi.style.cursor = "default";
+			lokasi.style.background = "#009900";
+			jadwal.style.cursor = "cursor";
+			jadwal.style.background = "#008800";
 		});
 	</script>
 </body>
