--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			lokasi.style.background = "#008800";
 		});
 		lokasi.addEventListener('click',function (event){
-			content.innerHTML = '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32334.93849437493!2d107.65924990048114!3d-6.327988162315687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e694265f3c46d13%3A0x2c3b7a5351c8781e!2zNsKwMTknMTMuOCJTIDEwN8KwNDEnMDcuNyJF!5e0!3m2!1sen!2sid!4v1513003467215" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>';
+			content.innerHTML = '<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15862.277907819745!2d107.6858241190467!3d-6.320141309042271!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e694265eb29549f%3A0x104587cf10d45df6!2sGg.+Rajawali%2C+Ciasembaru%2C+Ciasem%2C+Kabupaten+Subang%2C+Jawa+Barat+41256!5e0!3m2!1sid!2sid!4v1513296542357" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>';
 			lokasi.style.cursor = "default";
 			lokasi.style.background = "#009900";
 			jadwal.style.cursor = "cursor";
