--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</div>
 	<div id="content">
 		<div id="maps">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15862.277907819745!2d107.6858241190467!3d-6.320141309042271!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e694265eb29549f%3A0x104587cf10d45df6!2sGg.+Rajawali%2C+Ciasembaru%2C+Ciasem%2C+Kabupaten+Subang%2C+Jawa+Barat+41256!5e0!3m2!1sid!2sid!4v1513296542357" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.3923315028312!2d107.68511748806434!3d-6.320160999712721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwMTknMTIuNiJTIDEwN8KwNDEnMDguNCJF!5e0!3m2!1sen!2sid!4v1513308692581" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 		<div id="acara">
 			<div class="main">
