ganti file type header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body lang="id" id="top">
 	<header id="header">
-		<img src="header.png" width="100%">
+		<img src="header.jpg" width="100%">
 	</header>
 	<table id="menu">
 		<tr>
@@ -56,7 +56,7 @@
 		<div id="maps">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.3923315028312!2d107.68511748806434!3d-6.320160999712721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwMTknMTIuNiJTIDEwN8KwNDEnMDguNCJF!5e0!3m2!1sen!2sid!4v1513308692581" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
-		<div id="acara">
+		<div id="acara" width="0">
 			<div class="main">
 			<div class="container bgy-green bgy-center bgy-back" > 
 			<div> 
@@ -78,16 +78,20 @@
 		var content_acara = document.getElementById("acara");
 		var content_lokasi = document.getElementById("maps");
 		jadwal.addEventListener('click',function (event){
+			content_acara.style.visibility = "visible";
 			content_acara.style.display = "block";
 			content_lokasi.style.display = "none";
+			content_lokasi.style.visibility = "hidden";
 			jadwal.style.cursor = "default";
 			jadwal.style.background = "#009900";
 			lokasi.style.cursor = "cursor";
 			lokasi.style.background = "#008800";
 		});
 		lokasi.addEventListener('click',function (event){
+			content_lokasi.style.visibility = "visible";
 			content_lokasi.style.display = "block";
 			content_acara.style.display = "none";
+			content_acara.style.visibility = "hidden";
 			lokasi.style.cursor = "default";
 			lokasi.style.background = "#009900";
 			jadwal.style.cursor = "cursor";
