--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 			content_acara.style.display = "block";
 			content_lokasi.style.display = "none";
 			content_lokasi.style.visibility = "hidden";
-			jadwal.style.cursor = "default";
+			// jadwal.style.cursor = "default";
 			// jadwal.style.background = "#009900";
 			jadwal.setAttribute("class","active");
-			lokasi.style.cursor = "cursor";
+			// lokasi.style.cursor = "cursor";
 			// lokasi.style.background = "#008800";
 			// setTimeout("jam()", 1000);
 			lokasi.setAttribute("class","");
@@ -95,10 +95,10 @@
 			content_lokasi.style.display = "block";
 			content_acara.style.display = "none";
 			content_acara.style.visibility = "hidden";
-			lokasi.style.cursor = "default";
+			// lokasi.style.cursor = "default";
 			lokasi.setAttribute("class","active");
 			// lokasi.style.background = "#009900";
-			jadwal.style.cursor = "cursor";
+			// jadwal.style.cursor = "pointer";
 			jadwal.setAttribute("class","");
 			// jadwal.style.background = "#008800";
 		});
