--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 	<div id="content">
 		<div id="maps" class="w3-animate-opacity">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d991.3923315028312!2d107.68511748806434!3d-6.320160999712721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwMTknMTIuNiJTIDEwN8KwNDEnMDguNCJF!5e0!3m2!1sen!2sid!4v1513308692581" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<p class="bgy-text-white bgy-center bgy-text-bold">
+				Dusun Warungnangka, Kp. Hegarmanah No. 38 RT04/05, Desa Ciasem Baru, Kecamatan Ciasem, Kabupaten Subang, Jawa Barat.
+			</p>
 		</div>
 		<div id="acara" width="0" class="w3-animate-opacity">
 			<div class="main">
