--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 			<div class="container bgy-green bgy-center bgy-back" > 
 			<div> 
 			<div> 
-			<img src="top.png" width="100%" style="z-index: 1;position: static;"> 
+			<img src="top.svg" width="100%" style="z-index: 1;position: static;"> 
 			</div> 
 			</div> 
-			<img src="label2.png" width="30%"> <div> <img src="bottom.png" width="100%"> 
+			<img src="label2.png" width="30%"> <div> <img src="bottom.svg" width="100%"> 
 			</div> 
 			</div> 
 		</div>
