ada logo daftarnya

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<table align="center">
 					<tr>
 						<td>
-							
+							<img src="daftar.svg" width="50px" height="50px" >	
 						</td>
 					</tr>
 					<tr>
