[IMP] home view

--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Erlangga Indra Permana</title>
 	<link rel="stylesheet" type="text/css" href="css/simple.css">
 </head>
-<body class="animate-top background">
+<body class="sliding-top background">
 	<header>
-		<div class="menu right">
+		<nav class="menu right">
 			<ul>
 				<li><a class="text-black" href="">Home</a></li>
 				<li><a class="text-black" href="odoo">Odoo</a></li>
 				<li><a class="text-black" href="about">About</a></li>
 			</ul>
-		</div>
+		</nav>
 		<div class="center">
 			<h1 class="center">Learn the Past and Taste the Future</h1>
 		</div>
 	</header>
-	<footer>
+	<footer class="bottom-left">
 		<div>Developed by <a class="text-black" href="">Erlangga</a> - &copy;2018</div>
 	</footer>
 </body>
