--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<header>
 		<nav class="menu right">
 			<ul>
-				<li><a class="text-black" href="">Home</a></li>
-				<li><a class="text-black" href="odoo">Odoo</a></li>
-				<li><a class="text-black" href="about">About</a></li>
+				<li><a class="text-black text-bold" href="">Home</a></li>
+				<li><a class="text-black text-bold" href="odoo">Odoo</a></li>
+				<li><a class="text-black text-bold" href="about">About</a></li>
 			</ul>
 		</nav>
 		<div class="center">
