--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Erlangga Indra Permana</title>
-	<link rel="stylesheet" type="text/css" href="css/simple.css">
+	<link rel="stylesheet" type="text/css" href="/css/simple.css">
+	<script type="text/javascript" src="/js/simple.js"></script>
 </head>
 <body class="sliding-top background">
-	<header>
-		<nav class="menu right">
+	<header class="full-width">
+		<span class="toggler-menu full-width" id="toggler-menu">
+			<div></div>
+			<div></div>
+			<div></div>
+		</span>
+		<nav class="main menu right" id="menu">
 			<ul>
-				<li><a class="text-black text-bold" href="">Home</a></li>
-				<li><a class="text-black text-bold" href="odoo">Odoo</a></li>
-				<li><a class="text-black text-bold" href="about">About</a></li>
+				<li><a class="black bold" href="/">Home</a></li>
+				<li><a class="black bold" href="/odoo">Odoo</a></li>
+				<li><a class="black bold" href="/about">About</a></li>
 			</ul>
 		</nav>
-		<div class="center">
-			<h1 class="center">Learn the Past and Taste the Future</h1>
-		</div>
 	</header>
-	<footer class="bottom-left">
-		<div>Developed by <a class="text-black" href="">Erlangga</a> - &copy;2018</div>
+	<div class="center">
+		<h1 class="center">Hello</h1>
+	</div>
+	<footer class="bottom-left" style="position: absolute;" id="footer">
+		<div>Developed by <a class="black" href="">Erlangga</a> - &copy;2019</div>
 	</footer>
 </body>
 </html>
