--- a/404.html
+++ b/404.html
@@ -13,18 +13,18 @@
 </head>
 <body class="sliding-top background">
     <header>
-        <span class="toggler-menu full-width" id="toggler-menu">
+        <span id="toggler-menu" class="toggler-menu">
             <div></div>
             <div></div>
             <div></div>
         </span>
-        <nav class="main menu right" id="menu">
+        <nav class="menu right" id="menu">
             <ul>
                 <li><a class="black bold" href="/">Home</a></li>
                 <li><a class="black bold" href="/odoo">Odoo</a></li>
                 <li><a class="black bold" href="/about">About</a></li>
             </ul>
-        </nav
+        </nav>
     </header>
     <section class="center sliding-bottom" style="animation-duration: 1s;">
         <div>
