--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<script type="text/javascript" src="/js/simple.js"></script>
 </head>
 <body class="sliding-top background">
-	<header class="full-width">
-		<span class="toggler-menu full-width" id="toggler-menu">
+	<header>
+		<span id="toggler-menu" class="toggler-menu">
 			<div></div>
 			<div></div>
 			<div></div>
 		</span>
-		<nav class="main menu right" id="menu">
+		<nav class="menu right" id="menu">
 			<ul>
 				<li><a class="black bold" href="/">Home</a></li>
 				<li><a class="black bold" href="/odoo">Odoo</a></li>
@@ -23,8 +23,8 @@
 			</ul>
 		</nav>
 	</header>
-	<div class="center">
-		<h1 class="center">Hello</h1>
+	<div>
+		<h1 class="position-center" style="top: 40%; z-index: 0.5;">Hello</h1>
 	</div>
 	<footer class="bottom-left" style="position: absolute;" id="footer">
 		<div>Developed by <a class="black" href="">Erlangga</a> - &copy;2019</div>
