--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</nav>
 	</header>
 	<div>
-		<h1 class="position-center" style="top: 40%; z-index: 0.1;">Hello</h1>
+		<h1 class="position-center" style="top: 40%;">Hello</h1>
 	</div>
 	<footer class="bottom-left" style="position: absolute;" id="footer">
 		<div>Developed by <a class="black" href="">Erlangga</a> - &copy;2019</div>
