add odoo2 and imp css, js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="full-height">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,16 +10,18 @@
 </head>
 <body class="sliding-top background">
 	<header>
-		<span id="toggler-menu" class="toggler-menu">
-			<div></div>
-			<div></div>
-			<div></div>
-		</span>
+		<div class="full-width background-black">
+			<span id="toggler-menu" class="toggler-menu">
+				<div></div>
+				<div></div>
+				<div></div>
+			</span>
+		</div>
 		<nav class="menu right" id="menu">
 			<ul>
-				<li><a class="black bold" href="/">Home</a></li>
-				<li><a class="black bold" href="/odoo">Odoo</a></li>
-				<li><a class="black bold" href="/about">About</a></li>
+				<li><a class="bold" href="/">Home</a></li>
+				<li><a class="bold" href="/odoo">Odoo</a></li>
+				<li><a class="bold" href="/about">About</a></li>
 			</ul>
 		</nav>
 	</header>
